fix spacing for search result

--- a/src/chomp/search-results-screen/index.css
+++ b/src/chomp/search-results-screen/index.css
@@ -7,7 +7,7 @@
 /* for rx-card */
 
 .wd-rx-card-width {
-    max-width: 20rem;
+    width: 30rem;
 }
 
 .wd-rx-card-text {
@@ -23,10 +23,9 @@
 
 .wd-rx-name {
     font-size: 2rem;
-    font-weight: bold;
 }
 
-.wd-badge {
+.badge {
     font-size: 1rem;
     margin-right: 0.5em;
 }
